crates/dsql-generate/tests/it/snapshots/it__generate__native_enum_contracts_flow_through_generated_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: "artifacts.join(\"\\n---\\n\")"
---
DynamicEnums
{"name":"DynamicEnums","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'status',\n        CAST(\"enum_records_9195a94c\".\"status\" as text)\n      )\n    ),\n    '[]'\n  ) as \"enum_records\"\nfrom\n  \"public\".\"enum_records\" as \"enum_records_9195a94c\"\nwhere\n  {{dynamic:0}}","compact_text":"SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('status', CAST(\"enum_records_9195a94c\".\"status\" AS text))), '[]') AS \"enum_records\" FROM \"public\".\"enum_records\" AS \"enum_records_9195a94c\" WHERE {{dynamic:0}}","parameters":[],"variants":[]},"result":{"fields":[{"path":"enum_records","name":"enum_records","parent_path":"","kind":"array","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"},{"path":"enum_records.status","name":"status","parent_path":"enum_records","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"public.status","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]}},"nullable":false,"access":"unconditional"}]},"params":[{"path":"params.search","data_type":"dynamic_predicate","wire":{"encoding":"unsupported"},"validation":{},"closed_values":{"values":[]},"required":false,"nullable":false,"default":{"kind":"empty_object"}}],"input":[],"context":[],"dynamic_inputs":[{"path":"params.search","kind":"predicate","surface":"selected","fields":[{"key":"status","catalog_path":"public.enum_records.status","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"validation":{},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]},"nullable":false,"access":"unconditional","operators":["eq","neq","gt","gte","lt","lte","in","not_in","is_null"],"directions":[]}],"sites":[{"marker":"{{dynamic:0}}","identity_sql":"TRUE","fields":[{"key":"status","operators":[{"name":"eq","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") = ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"neq","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") != ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"gt","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") > ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"gte","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") >= ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"lt","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") < ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"lte","value_kind":"scalar","before_value":"(\"enum_records_9195a94c\".\"status\") <= ((","after_value":")::text)::\"public\".\"status\"","cases":[]},{"name":"in","value_kind":"collection","before_value":"(\"enum_records_9195a94c\".\"status\") = ANY(((","after_value":")::text[])::\"public\".\"status\"[])","cases":[]},{"name":"not_in","value_kind":"collection","before_value":"(\"enum_records_9195a94c\".\"status\") <> ALL(((","after_value":")::text[])::\"public\".\"status\"[])","cases":[]},{"name":"is_null","value_kind":"boolean","cases":[{"value":"true","text":"(\"enum_records_9195a94c\".\"status\") IS NULL"},{"value":"false","text":"(\"enum_records_9195a94c\".\"status\") IS NOT NULL"}]}],"directions":[]}]}]}],"policies":[{"scope":"frontend","defined_in":"frontend","name":"EnumContext","default_active":false,"enforcement":"none","conditions":[],"context":[],"source":{"id":"frontend::EnumContext","file":"queries/frontend/native-enums.dsql","range":{"start":0,"end":66}},"applications":[{"path":"enum_records","target":"public.enum_records","assignment":"default","rows_filtered":false,"fields":[]}]}],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"DynamicEnums","file":"queries/frontend/native-enums.dsql","range":{"start":318,"end":415}}]}
---
NativeEnums
{"name":"NativeEnums","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"root\".\"enum_records\" as \"enum_records\"\nfrom\n  (\n    select\n      1) as \"singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'status',\n        CAST(\"enum_records_9195a94c\".\"status\" as text),\n        'domain_status',\n        CAST(\"enum_records_9195a94c\".\"domain_status\" as text),\n        'statuses',\n        CAST(\"enum_records_9195a94c\".\"statuses\" as text[])\n      ) as \"enum_records\"\n    from\n      \"public\".\"enum_records\" as \"enum_records_9195a94c\"\n    where\n      \"enum_records_9195a94c\".\"status\" = ((($1)::text)::\"public\".\"status\")\n      and (\n        \"enum_records_9195a94c\".\"status\" = ((($2)::text)::\"public\".\"status\")\n        and (\n          \"enum_records_9195a94c\".\"status\" = ANY((($3)::text[])::\"public\".\"status\"[])\n        )\n      )\n    limit\n      1\n  ) as \"root\" on true","compact_text":"SELECT \"root\".\"enum_records\" AS \"enum_records\" FROM (SELECT 1) AS \"singleton\" LEFT JOIN LATERAL (SELECT JSON_BUILD_OBJECT('status', CAST(\"enum_records_9195a94c\".\"status\" AS text), 'domain_status', CAST(\"enum_records_9195a94c\".\"domain_status\" AS text), 'statuses', CAST(\"enum_records_9195a94c\".\"statuses\" AS text[])) AS \"enum_records\" FROM \"public\".\"enum_records\" AS \"enum_records_9195a94c\" WHERE \"enum_records_9195a94c\".\"status\" = ((($1)::text)::\"public\".\"status\") AND (\"enum_records_9195a94c\".\"status\" = ((($2)::text)::\"public\".\"status\") AND (\"enum_records_9195a94c\".\"status\" = ANY((($3)::text[])::\"public\".\"status\"[]))) LIMIT 1) AS \"root\" ON true","parameters":[{"path":"context.status"},{"path":"params.status"},{"path":"params.statuses"}],"variants":[]},"result":{"fields":[{"path":"enum_records","name":"enum_records","parent_path":"","kind":"object","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"},"closed_values":{"values":[]}},"nullable":true,"access":"row_dependent"},{"path":"enum_records.status","name":"status","parent_path":"enum_records","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"public.status","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]}},"nullable":false,"access":"unconditional"},{"path":"enum_records.domain_status","name":"domain_status","parent_path":"enum_records","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"public.status_domain","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status_domain"}},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]}},"nullable":false,"access":"unconditional"},{"path":"enum_records.statuses","name":"statuses","parent_path":"enum_records","kind":"scalar","value_type":{"shape":"database_array","name":"text","display":"public._status","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]}},"nullable":false,"access":"unconditional"}]},"params":[{"path":"params.status","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"validation":{},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]},"required":false,"nullable":false,"default":{"kind":"string","value":"active"}},{"path":"params.statuses","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"validation":{},"collection":true,"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]},"required":false,"nullable":false,"default":{"kind":"collection","items":[{"kind":"string","value":"pending"},{"kind":"string","value":"archived"}]}}],"input":[],"context":[{"path":"context.status","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"public","name":"status"}},"validation":{},"closed_values":{"description":"Lifecycle status.","values":[{"value":"pending"},{"value":"active"},{"value":"archived"}]},"required":true,"nullable":false}],"dynamic_inputs":[],"policies":[{"scope":"frontend","defined_in":"frontend","name":"EnumContext","default_active":false,"enforcement":"none","conditions":[],"context":["context.status"],"source":{"id":"frontend::EnumContext","file":"queries/frontend/native-enums.dsql","range":{"start":0,"end":66}},"applications":[{"path":"enum_records","target":"public.enum_records","assignment":"enabled","rows_filtered":true,"fields":[]}]}],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"NativeEnums","file":"queries/frontend/native-enums.dsql","range":{"start":67,"end":317}}]}
