crates/dsql-generate/tests/it/snapshots/it__generate__numeric_wire_types_flow_through_generated_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: "artifacts.join(\"\\n---\\n\")"
---
NumericMetrics
{"name":"NumericMetrics","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'amount',\n        CAST(\"metrics_b773e828\".\"amount\" as text),\n        'ratio',\n        \"metrics_b773e828\".\"ratio\"\n      )\n    ),\n    '[]'\n  ) as \"metrics\"\nfrom\n  \"public\".\"metrics\" as \"metrics_b773e828\"\nwhere\n  \"metrics_b773e828\".\"amount\" >= ($1)","parameters":[{"path":"params.minimum"}],"variants":[]},"result":{"fields":[{"path":"metrics","name":"metrics","parent_path":"","kind":"array","data_type":"object","nullable":false},{"path":"metrics.amount","name":"amount","parent_path":"metrics","kind":"scalar","data_type":"numeric","nullable":false},{"path":"metrics.ratio","name":"ratio","parent_path":"metrics","kind":"scalar","data_type":"float","nullable":true}]},"params":[{"path":"params.minimum","data_type":"numeric","enum_values":[],"required":true,"nullable":false}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"NumericMetrics","file":"queries/frontend/numeric.dsql","range":{"start":0,"end":79}}]}
---
NumericSummary
{"name":"NumericSummary","kind":"query","sql":{"dialect":"postgres","text":"select\n  JSON_BUILD_OBJECT(\n    'total_amount',\n    CAST(SUM(\"summary_bea0cdc1\".\"amount\") as text),\n    'average_amount',\n    CAST(AVG(\"summary_bea0cdc1\".\"amount\") as text),\n    'total_ratio',\n    SUM(\"summary_bea0cdc1\".\"ratio\"),\n    'average_ratio',\n    AVG(\"summary_bea0cdc1\".\"ratio\")\n  ) as \"summary\"\nfrom\n  \"public\".\"metrics\" as \"summary_bea0cdc1\"","parameters":[],"variants":[]},"result":{"fields":[{"path":"summary","name":"summary","parent_path":"","kind":"object","data_type":"object","nullable":false},{"path":"summary.total_amount","name":"total_amount","parent_path":"summary","kind":"scalar","data_type":"numeric","nullable":true},{"path":"summary.average_amount","name":"average_amount","parent_path":"summary","kind":"scalar","data_type":"numeric","nullable":true},{"path":"summary.total_ratio","name":"total_ratio","parent_path":"summary","kind":"scalar","data_type":"float","nullable":true},{"path":"summary.average_ratio","name":"average_ratio","parent_path":"summary","kind":"scalar","data_type":"float","nullable":true}]},"params":[],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"NumericSummary","file":"queries/frontend/numeric.dsql","range":{"start":80,"end":261}}]}
