crates/dsql-generate/tests/it/snapshots/it__generate__policy_metadata_explains_composed_access_and_disabled_assignments.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: artifact.serialized
---
{"name":"PolicyAudit","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"root\".\"users\" as \"users\"\nfrom\n  (\n    select\n      1) as \"singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'name',\n        (\n          case\n            when (\n              ($3)\n              and \"users_99fc7350\".\"id\" = ($1)\n            ) then \"users_99fc7350\".\"name\"\n            else null\n          end\n        ),\n        'posts',\n        \"posts_json_9b3bd304\".\"posts_result_9b3bd304\"\n      ) as \"users\"\n    from\n      \"public\".\"users\" as \"users_99fc7350\"\n      left join LATERAL (\n        select\n          COALESCE(\n            JSON_AGG(\n              JSON_BUILD_OBJECT('title', \"posts_9b3bd304\".\"title\")\n            ),\n            '[]'\n          ) as \"posts_result_9b3bd304\"\n        from\n          \"public\".\"posts\" as \"posts_9b3bd304\"\n        where\n          \"posts_9b3bd304\".\"user_id\" = \"users_99fc7350\".\"id\"\n          and (\n            \"users_99fc7350\".\"id\" = ($1)\n            and ($2)\n          )\n      ) as \"posts_json_9b3bd304\" on true\n    limit\n      1\n  ) as \"root\" on true","compact_text":"SELECT \"root\".\"users\" AS \"users\" FROM (SELECT 1) AS \"singleton\" LEFT JOIN LATERAL (SELECT JSON_BUILD_OBJECT('name', (CASE WHEN (($3) AND \"users_99fc7350\".\"id\" = ($1)) THEN \"users_99fc7350\".\"name\" ELSE NULL END), 'posts', \"posts_json_9b3bd304\".\"posts_result_9b3bd304\") AS \"users\" FROM \"public\".\"users\" AS \"users_99fc7350\" LEFT JOIN LATERAL (SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('title', \"posts_9b3bd304\".\"title\")), '[]') AS \"posts_result_9b3bd304\" FROM \"public\".\"posts\" AS \"posts_9b3bd304\" WHERE \"posts_9b3bd304\".\"user_id\" = \"users_99fc7350\".\"id\" AND (\"users_99fc7350\".\"id\" = ($1) AND ($2))) AS \"posts_json_9b3bd304\" ON true LIMIT 1) AS \"root\" ON true","parameters":[{"path":"context.user_id"},{"path":"context.can_read_posts"},{"path":"context.is_admin"}],"variants":[]},"result":{"fields":[{"path":"users","name":"users","parent_path":"","kind":"object","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"}},"nullable":true,"access":"unconditional"},{"path":"users.name","name":"name","parent_path":"users","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"text","wire":{"encoding":"text"}},"nullable":true,"access":"row_dependent"},{"path":"users.posts","name":"posts","parent_path":"users","kind":"array","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"}},"nullable":false,"access":"row_dependent"},{"path":"users.posts.title","name":"title","parent_path":"users.posts","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"text","wire":{"encoding":"text"}},"nullable":true,"access":"unconditional"}]},"params":[],"input":[],"context":[{"path":"context.can_read_posts","data_type":"boolean","wire":{"encoding":"boolean"},"enum_values":[],"required":true,"nullable":false},{"path":"context.is_admin","data_type":"boolean","wire":{"encoding":"boolean"},"enum_values":[],"required":true,"nullable":false},{"path":"context.user_id","data_type":"uuid","wire":{"encoding":"uuid"},"enum_values":[],"required":true,"nullable":false}],"dynamic_inputs":[],"policies":[{"scope":"frontend","defined_in":"frontend","name":"ContextName","default_active":true,"enforcement":"none","conditions":[],"context":["context.is_admin"],"source":{"id":"frontend::ContextName","file":"queries/frontend/access.dsql","range":{"start":0,"end":69}},"applications":[{"path":"users","target":"public.users","assignment":"default","rows_filtered":false,"fields":[{"name":"name","kind":"column","access":"context_only"}]}]},{"scope":"frontend","defined_in":"frontend","name":"Manual","default_active":false,"enforcement":"none","conditions":[],"context":[],"source":{"id":"frontend::Manual","file":"queries/frontend/access.dsql","range":{"start":283,"end":326}},"applications":[{"path":"users","target":"public.users","assignment":"disabled","rows_filtered":false,"fields":[]}]},{"scope":"frontend","defined_in":"frontend","name":"RowName","default_active":true,"enforcement":"none","conditions":[],"context":["context.user_id"],"source":{"id":"frontend::RowName","file":"queries/frontend/access.dsql","range":{"start":70,"end":141}},"applications":[{"path":"users","target":"public.users","assignment":"default","rows_filtered":false,"fields":[{"name":"name","kind":"column","access":"row_dependent"}]}]},{"scope":"frontend","defined_in":"frontend","name":"UserPosts","default_active":true,"enforcement":"none","conditions":[],"context":["context.user_id"],"source":{"id":"frontend::UserPosts","file":"queries/frontend/access.dsql","range":{"start":142,"end":216}},"applications":[{"path":"users","target":"public.users","assignment":"default","rows_filtered":false,"fields":[{"name":"posts","kind":"relation","access":"row_dependent"}]}]},{"scope":"frontend","defined_in":"frontend","name":"VisiblePosts","default_active":true,"enforcement":"none","conditions":[],"context":["context.can_read_posts"],"source":{"id":"frontend::VisiblePosts","file":"queries/frontend/access.dsql","range":{"start":217,"end":282}},"applications":[{"path":"users.body.posts","target":"public.posts","assignment":"default","rows_filtered":true,"fields":[]}]}],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"PolicyAudit","file":"queries/frontend/access.dsql","range":{"start":327,"end":426}}]}
