crates/dsql-generate/tests/it/snapshots/it__generate__provider_array_dynamic_inputs_remain_unsupported.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: error
---
the project has 1 error diagnostics; fix them before generating:
queries/frontend/events-array-dynamic.dsql:54..73: bounded dynamic input exposes unsupported fields: event_dates (date[])
