crates/dsql-generate/tests/it/snapshots/it__generate__provider_policy_context_conflicts_block_generation.snap
---
source: crates/dsql-generate/tests/it/generate.rs
assertion_line: 767
expression: error.to_string()
---
the project has 1 error diagnostics; fix them before generating:
queries/frontend/policy.dsql:73..81: trusted context `context.shared` is required as both `pg_catalog.date` and `pg_catalog.inet`
