crates/dsql-generate/tests/it/snapshots/it__generate__provider_policy_context_mismatches_block_generation.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: error.to_string()
---
the project has 1 error diagnostics; fix them before generating:
queries/frontend/policy.dsql:110..118: trusted context `context.shared` is declared as `pg_catalog::date` but this use requires `pg_catalog::inet`
