crates/dsql-generate/tests/it/snapshots/it__generate__provider_scalar_dynamic_inputs_use_the_effective_logical_name.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: artifact.serialized
---
{"name":"DynamicEvents","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'event_date',\n        CAST(\"events_cc4ff0da\".\"event_date\" as text)\n      )\n    ),\n    '[]'\n  ) as \"events\"\nfrom\n  \"public\".\"events\" as \"events_cc4ff0da\"\nwhere\n  {{dynamic:0}}","compact_text":"SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('event_date', CAST(\"events_cc4ff0da\".\"event_date\" AS text))), '[]') AS \"events\" FROM \"public\".\"events\" AS \"events_cc4ff0da\" WHERE {{dynamic:0}}","parameters":[],"variants":[]},"result":{"fields":[{"path":"events","name":"events","parent_path":"","kind":"array","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"}},"nullable":false,"access":"unconditional"},{"path":"events.event_date","name":"event_date","parent_path":"events","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"date","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}}},"nullable":false,"access":"unconditional"}]},"params":[{"path":"params.search","data_type":"dynamic_predicate","wire":{"encoding":"unsupported"},"validation":{},"enum_values":[],"required":false,"nullable":false,"default":{"kind":"empty_object"}}],"input":[],"context":[],"dynamic_inputs":[{"path":"params.search","kind":"predicate","surface":"selected","fields":[{"key":"event_date","catalog_path":"public.events.event_date","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"validation":{},"nullable":false,"access":"unconditional","operators":["eq","neq","gt","gte","lt","lte","in","not_in","is_null"],"directions":[]}],"sites":[{"marker":"{{dynamic:0}}","identity_sql":"TRUE","fields":[{"key":"event_date","operators":[{"name":"eq","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") = ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"neq","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") != ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"gt","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") > ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"gte","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") >= ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"lt","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") < ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"lte","value_kind":"scalar","before_value":"(\"events_cc4ff0da\".\"event_date\") <= ((","after_value":")::text)::\"pg_catalog\".\"date\"","cases":[]},{"name":"in","value_kind":"collection","before_value":"(\"events_cc4ff0da\".\"event_date\") = ANY(((","after_value":")::text[])::\"pg_catalog\".\"date\"[])","cases":[]},{"name":"not_in","value_kind":"collection","before_value":"(\"events_cc4ff0da\".\"event_date\") <> ALL(((","after_value":")::text[])::\"pg_catalog\".\"date\"[])","cases":[]},{"name":"is_null","value_kind":"boolean","cases":[{"value":"true","text":"(\"events_cc4ff0da\".\"event_date\") IS NULL"},{"value":"false","text":"(\"events_cc4ff0da\".\"event_date\") IS NOT NULL"}]}],"directions":[]}]}]}],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"DynamicEvents","file":"queries/frontend/events-dynamic.dsql","range":{"start":0,"end":88}}]}
