crates/dsql-generate/tests/it/snapshots/it__generate__provider_scalar_wire_identity_flows_through_generated_metadata.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: artifact.serialized
---
{"name":"Events","kind":"query","sql":{"dialect":"postgres","text":"select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'event_date',\n        CAST(\"events_cc4ff0da\".\"event_date\" as text),\n        'big_id',\n        CAST(\"events_cc4ff0da\".\"big_id\" as text)\n      )\n    ),\n    '[]'\n  ) as \"events\"\nfrom\n  \"public\".\"events\" as \"events_cc4ff0da\"\nwhere\n  \"events_cc4ff0da\".\"event_date\" = ((($1)::text)::\"pg_catalog\".\"date\")\n  and \"events_cc4ff0da\".\"big_id\" >= ($2)","compact_text":"SELECT COALESCE(JSON_AGG(JSON_BUILD_OBJECT('event_date', CAST(\"events_cc4ff0da\".\"event_date\" AS text), 'big_id', CAST(\"events_cc4ff0da\".\"big_id\" AS text))), '[]') AS \"events\" FROM \"public\".\"events\" AS \"events_cc4ff0da\" WHERE \"events_cc4ff0da\".\"event_date\" = ((($1)::text)::\"pg_catalog\".\"date\") AND \"events_cc4ff0da\".\"big_id\" >= ($2)","parameters":[{"path":"params.date"},{"path":"params.minimum_big_id"}],"variants":[]},"result":{"fields":[{"path":"events","name":"events","parent_path":"","kind":"array","value_type":{"shape":"object","name":"object","wire":{"encoding":"unsupported"},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"},{"path":"events.event_date","name":"event_date","parent_path":"events","kind":"scalar","value_type":{"shape":"scalar","name":"text","display":"date","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"},{"path":"events.big_id","name":"big_id","parent_path":"events","kind":"scalar","value_type":{"shape":"scalar","name":"bigint","display":"int8","wire":{"encoding":"big_integer"},"closed_values":{"values":[]}},"nullable":false,"access":"unconditional"}]},"params":[{"path":"params.date","data_type":"text","wire":{"encoding":"text_cast","provider_type":{"schema":"pg_catalog","name":"date"}},"validation":{},"closed_values":{"values":[]},"required":true,"nullable":false},{"path":"params.minimum_big_id","data_type":"bigint","wire":{"encoding":"big_integer"},"validation":{},"closed_values":{"values":[]},"required":true,"nullable":false}],"input":[],"context":[],"dynamic_inputs":[],"policies":[],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"Events","file":"queries/frontend/events.dsql","range":{"start":0,"end":104}}]}
