crates/dsql-generate/tests/it/snapshots/it__generate__reused_dynamic_inputs_require_identical_preset_spellings.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: error
---
the project has 1 error diagnostics; fix them before generating:
queries/frontend/incompatible-preset.dsql:131..150: dynamic input `params.search` is reused: preset `indexed` conflicts with preset `selected_indexed`
