crates/dsql-generate/tests/it/snapshots/it__generate__row_filtered_singular_relations_make_object_and_flattened_fields_nullable.snap
---
source: crates/dsql-generate/tests/it/generate.rs
expression: artifact.serialized
---
{"name":"FilteredOwner","kind":"query","sql":{"dialect":"postgres","text":"select\n  \"dsql_root\".\"posts\" as \"posts\"\nfrom\n  (\n    select\n      1) as \"dsql_singleton\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT(\n        'id',\n        \"posts_ed412d1c\".\"id\",\n        'users',\n        \"users_json_bc98860c\".\"users_result_bc98860c\",\n        'owner_id',\n        \"users_json_7fc74404\".\"owner_id\",\n        'owner_name',\n        \"users_json_7fc74404\".\"owner_name\"\n      ) as \"posts\"\n    from\n      \"public\".\"posts\" as \"posts_ed412d1c\"\n      left join LATERAL (\n        select\n          JSON_BUILD_OBJECT(\n            'id',\n            \"users_bc98860c\".\"id\",\n            'name',\n            \"users_bc98860c\".\"name\"\n          ) as \"users_result_bc98860c\"\n        from\n          \"public\".\"users\" as \"users_bc98860c\"\n        where\n          \"users_bc98860c\".\"id\" = \"posts_ed412d1c\".\"user_id\"\n          and \"users_bc98860c\".\"name\" <> 'hidden'\n      ) as \"users_json_bc98860c\" on true\n      left join LATERAL (\n        select\n          \"users_7fc74404\".\"id\" as \"owner_id\",\n          \"users_7fc74404\".\"name\" as \"owner_name\"\n        from\n          \"public\".\"users\" as \"users_7fc74404\"\n        where\n          \"users_7fc74404\".\"id\" = \"posts_ed412d1c\".\"user_id\"\n          and \"users_7fc74404\".\"name\" <> 'hidden'\n      ) as \"users_json_7fc74404\" on true\n    limit\n      1\n  ) as \"dsql_root\" on true","parameters":[],"variants":[]},"result":{"fields":[{"path":"posts","name":"posts","parent_path":"","kind":"object","data_type":"object","nullable":true,"access":"unconditional"},{"path":"posts.id","name":"id","parent_path":"posts","kind":"scalar","data_type":"uuid","nullable":false,"access":"unconditional"},{"path":"posts.users","name":"users","parent_path":"posts","kind":"object","data_type":"object","nullable":true,"access":"row_dependent"},{"path":"posts.users.id","name":"id","parent_path":"posts.users","kind":"scalar","data_type":"uuid","nullable":false,"access":"unconditional"},{"path":"posts.users.name","name":"name","parent_path":"posts.users","kind":"scalar","data_type":"text","nullable":false,"access":"unconditional"},{"path":"posts.owner_id","name":"owner_id","parent_path":"posts","kind":"scalar","data_type":"uuid","nullable":true,"access":"row_dependent"},{"path":"posts.owner_name","name":"owner_name","parent_path":"posts","kind":"scalar","data_type":"text","nullable":true,"access":"row_dependent"}]},"params":[],"input":[],"context":[],"dynamic_inputs":[],"policies":[{"scope":"frontend","defined_in":"frontend","name":"VisibleUsers","default_active":false,"enforcement":"none","conditions":[],"context":[],"source":{"id":"frontend::VisibleUsers","file":"queries/frontend/filtered-owner.dsql","range":{"start":0,"end":56}},"applications":[{"path":"posts.body.users","target":"public.users","assignment":"enabled","rows_filtered":true,"fields":[]},{"path":"posts.body.users","target":"public.users","assignment":"enabled","rows_filtered":true,"fields":[]}]}],"handoffs":[],"fragment_spreads":[],"source_map":[{"id":"FilteredOwner","file":"queries/frontend/filtered-owner.dsql","range":{"start":57,"end":221}}]}
